# lukechu10.github.io

./: 404.html  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
.github/workflows/: deploy.yml
assets/: index.scss  prism.css  prism.js
assets/arcade/: arcade_design.f3d
assets/arcade/images/: arcade_design_3.avif
assets/low-energy-transfers/slides/: BallisticCapture.json  EarthMoonManifolds.json  Manifolds3Body.json  PotentialHill.json  SinglePlanet.json
posts/: hello-world.mdx  test.mdx
posts/2024/: arcade-design-and-materials.mdx  hello-world.mdx  interplanetary-transport-network.mdx  low-energy-transfers.mdx  test.mdx
posts/2024/low-energy-transfers/slides/: EarthMoonManifolds.json  EffectivePotential.json  HaloOrbits.json  LeoToMoon.json  Manifolds3Body.json  MultiPlanet.json  PotentialHill.json  References.json  RestrictedNBodyProblem.json  SinglePlanet.json  TitleSlide.json
src/: main.rs  shell.rs
src/components/: math.rs  mod.rs  slides.rs
src/pages/: about.rs  home.rs  post.rs
